--- a/Samples/auth/Outlook-Add-in-SSO-NAA-IE/package.json
+++ b/Samples/auth/Outlook-Add-in-SSO-NAA-IE/package.json
@@ -28,38 +28,37 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@azure/msal-browser": "^3.24.0",
+    "@azure/msal-browser": "^5.1.0",
     "@azure/msal-browser-v2": "npm:@azure/msal-browser@^2.39.0",
-    "core-js": "^3.9.1",
-    "regenerator-runtime": "^0.13.7"
+    "core-js": "^3.36.0",
+    "regenerator-runtime": "^0.14.1",
+    "unfetch": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.23.3",
     "@types/office-js": "^1.0.377",
     "@types/office-runtime": "^1.0.35",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
-    "eslint-plugin-office-addins": "^3.0.2",
+    "eslint-plugin-office-addins": "^4.0.3",
     "file-loader": "^6.2.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "office-addin-cli": "^1.6.3",
-    "office-addin-debugging": "^5.1.4",
-    "office-addin-dev-certs": "^1.13.3",
-    "office-addin-lint": "^2.3.3",
-    "office-addin-manifest": "^1.13.4",
-    "office-addin-prettier-config": "^1.2.1",
+    "office-addin-cli": "^2.0.3",
+    "office-addin-debugging": "^6.0.6",
+    "office-addin-dev-certs": "^2.0.3",
+    "office-addin-lint": "^3.0.3",
+    "office-addin-manifest": "^2.1.2",
+    "office-addin-prettier-config": "^2.0.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "source-map-loader": "^5.0.0",
-    "ts-loader": "^9.5.1",
     "typescript": "^5.4.2",
-    "unfetch": "^5.0.0",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "5.1.0"
   },
   "prettier": "office-addin-prettier-config",
   "browserslist": [
